# redis

./: .clang-format  .clang-tidy  .codecov.yml  .drone.star  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL  Makefile  Makefile.am  README.adoc  README.md  adapt_8hpp_source.html  adapter_2adapt_8hpp_source.html  adapter_2error_8hpp_source.html  adapter_2ignore_8hpp_source.html  adapter_8cpp_source.html  adapters_8hpp_source.html  aedis.css  aedis.hpp  aedis_8cpp_source.html  aedis_8hpp_source.html  aggregates_8cpp_source.html  aggregates__high__level_8cpp_source.html  annotated.html  appveyor.yml  async__intro_8cpp_source.html  boost__redis_8cpp_source.html  build.jam  chat__room_8cpp_source.html  classaedis_1_1basic__connection-members.html  classaedis_1_1basic__connection.html  classaedis_1_1connection-members.html  classaedis_1_1connection.html  classaedis_1_1connection.js  classaedis_1_1detail_1_1connection__base-members.html  classaedis_1_1detail_1_1connection__base.html  classaedis_1_1experimental_1_1sync-members.html  classaedis_1_1experimental_1_1sync.html  classaedis_1_1experimental_1_1sync__wrapper-members.html  (+233 more)
benchmarks/: CMakeLists.txt  benchmarks.md  benchmarks.tex  echo_server_over_redis.js
benchmarks/cpp/: echo_server_direct.cpp
benchmarks/cpp/asio/: echo_server_client.cpp  echo_server_direct.cpp
benchmarks/cpp/libuv/: echo_server_direct.c
benchmarks/go/: echo_server_direct.go  echo_server_over_redis.go
benchmarks/nodejs/echo_server_over_redis/: echo_server_over_redis.js  package-lock.json  package.json
benchmarks/rust/echo_server_direct/: Cargo.toml
benchmarks/rust/echo_server_direct/src/: main.rs
benchmarks/rust/echo_server_over_redis/: Cargo.toml
benchmarks/rust/echo_server_over_redis/src/: main.rs
example/: CMakeLists.txt  corosio_chat_room.cpp  corosio_containers.cpp  corosio_echo_server.cpp  corosio_intro.cpp  corosio_intro_tls.cpp  corosio_json.cpp  corosio_sentinel.cpp  corosio_spdlog.cpp  corosio_subscriber.cpp  corosio_timeouts.cpp  corosio_unix_sockets.cpp  cpp17_intro.cpp  cpp17_intro_sync.cpp  cpp17_spdlog.cpp  cpp20_chat_room.cpp  cpp20_containers.cpp  cpp20_echo_server.cpp  cpp20_intro.cpp  cpp20_intro_tls.cpp  cpp20_json.cpp  cpp20_protobuf.cpp  cpp20_resolve_with_sentinel.cpp  cpp20_sentinel.cpp  cpp20_streams.cpp  cpp20_subscriber.cpp  cpp20_unix_sockets.cpp  main.cpp  sync_connection.hpp
include/: Makefile.am  aedis.hpp
include/aedis/: adapt.hpp  aedis.hpp  buffers.hpp  command.hpp  command.ipp  config.hpp  connection.cpp  connection.hpp  connection.ipp  connection_base.hpp  endpoint.hpp  error.hpp  net.hpp  operation.hpp  parser.hpp  parser.ipp  pipeline.hpp  read.hpp  read.ipp  receiver.hpp  receiver_base.hpp  receiver_print.hpp  request.hpp  resp.hpp  resp_types.hpp  response.hpp  response_adapter.hpp  response_adapter_base.hpp  response_adapters.hpp  response_base.hpp  response_buffers.cpp  response_buffers.hpp  response_buffers.ipp  response_types.hpp  responses.hpp  src.hpp  sync.hpp  sync_base.hpp  type.hpp  type.ipp  (+4 more)
include/aedis/adapter/: adapt.hpp
include/aedis/adapter/detail/: adapters.hpp  response_traits.hpp
include/aedis/detail/: command.hpp  commands.hpp  connection_base.hpp  connection_ops.hpp  guarded_operation.hpp  net.hpp  parser.hpp  read.hpp  response_adapter_base.hpp  response_adapters.hpp  response_base.hpp  response_buffers.hpp  response_types.hpp  responses.hpp  utils.hpp  write.hpp
include/aedis/detail/impl/: command.ipp  commands.ipp  (+3 more)
include/aedis/experimental/: sync.hpp  sync_wrapper.hpp
include/aedis/impl/: command.ipp  commands.ipp  connection.ipp  endpoint.ipp  error.ipp  pipeline.ipp  read.ipp  response.ipp  response_adapter.ipp  src.hpp  type.ipp  types.ipp  write.ipp
include/aedis/redis/: client.hpp
include/aedis/resp3/: adapt.hpp  adapter_error.hpp  adapter_utils.hpp  array_adapter.hpp  basic_flat_array_adapter.hpp  big_number_adapter.hpp  blob_error_adapter.hpp  blob_string_adapter.hpp  boolean_adapter.hpp  client.hpp  client_base.hpp  compose.hpp  connection.hpp  consumer.hpp  doublean_adapter.hpp  error.hpp  exec.hpp  flat_map_adapter.hpp  flat_set_adapter.hpp  ignore_adapter.hpp  node.hpp  number_adapter.hpp  read.hpp  request.hpp  response.hpp  response_adapter_base.hpp  response_base.hpp  response_traits.hpp  serializer.hpp  simple_error_adapter.hpp  simple_string_adapter.hpp  stream.hpp  type.hpp  verbatim_string_adapter.hpp  write.hpp
include/aedis/ssl/: connection.hpp  sync.hpp
include/boost/: redis.hpp
include/boost/redis/: adapt.hpp  address.hpp  any_adapter.hpp  check_health.hpp  co_connection.hpp  config.hpp  connection.hpp  connection_base.hpp  corosio_connection.hpp  error.hpp  flow_controller.hpp  generic_flat_response_value.hpp  ignore.hpp  json.hpp  logger.hpp  operation.hpp  pubsub_messages.hpp  pubsub_response.hpp  push_parser.hpp  read.hpp  request.hpp  response.hpp  run.hpp  semaphore.hpp  src.hpp  usage.hpp  write.hpp
test/: CMakeLists.txt  Jamfile  asio_common.cpp  asio_common.hpp  boost_redis_asio.cpp  boost_redis_corosio.cpp  boost_redis_proto.cpp  common.cpp  common.hpp  corosio_common.cpp  corosio_common.hpp  print_node.hpp  sansio_utils.cpp  sansio_utils.hpp  test_any_adapter.cpp  test_co_check_health.cpp  test_co_conn_check_health.cpp  test_co_conn_setup.cpp  test_co_connect.cpp  test_co_exec_cancel.cpp  test_co_logging.cpp  test_co_move.cpp  test_co_push2.cpp  test_co_run_cancel.cpp  test_co_sentinel.cpp  test_co_setup.cpp  test_co_tls.cpp  test_co_unix_sockets.cpp  test_compose_setup_request.cpp  test_config.cpp  test_conn_auth.cpp  test_conn_cancel_after.cpp  test_conn_check_health.cpp  test_conn_echo_stress.cpp  test_conn_exec.cpp  test_conn_exec_cancel.cpp  test_conn_exec_cancel2.cpp  test_conn_exec_error.cpp  test_conn_exec_retry.cpp  test_conn_hello.cpp  (+44 more)
test/cmake_b2_corosio_test/: CMakeLists.txt
test/cmake_b2_test/: main.cpp
test/cmake_install_corosio_test/: CMakeLists.txt  main.cpp
test/cmake_subdir_corosio_test/: CMakeLists.txt
test/cmake_subdir_test/: CMakeLists.txt
test/cmake_test/: CMakeLists.txt
(+581 files in other folders)
