
add_library(boost_redis_benchmarks_options INTERFACE)
target_link_libraries(boost_redis_benchmarks_options INTERFACE boost_redis_src)
target_link_libraries(boost_redis_benchmarks_options INTERFACE boost_redis_project_options)
target_compile_features(boost_redis_benchmarks_options INTERFACE cxx_std_20)

add_executable(boost_redis_echo_server_client cpp/asio/echo_server_client.cpp)
target_link_libraries(boost_redis_echo_server_client PRIVATE boost_redis_benchmarks_options)

add_executable(boost_redis_echo_server_direct cpp/asio/echo_server_direct.cpp)
target_link_libraries(boost_redis_echo_server_direct PRIVATE boost_redis_benchmarks_options)
