
nobase_include_HEADERS =\
  $(top_srcdir)/include/aedis/src.hpp\
  $(top_srcdir)/include/aedis/error.hpp\
  $(top_srcdir)/include/aedis/impl/error.ipp\
  $(top_srcdir)/include/aedis/detail/net.hpp\
  $(top_srcdir)/include/aedis/connection.hpp\
  $(top_srcdir)/include/aedis/adapt.hpp\
  $(top_srcdir)/include/aedis/detail/connection_ops.hpp\
  $(top_srcdir)/include/aedis.hpp\
  $(top_srcdir)/include/aedis/adapter/detail/adapters.hpp\
  $(top_srcdir)/include/aedis/adapter/adapt.hpp\
  $(top_srcdir)/include/aedis/adapter/detail/response_traits.hpp\
  $(top_srcdir)/include/aedis/resp3/node.hpp\
  $(top_srcdir)/include/aedis/resp3/compose.hpp\
  $(top_srcdir)/include/aedis/resp3/detail/read_ops.hpp\
  $(top_srcdir)/include/aedis/resp3/detail/parser.hpp\
  $(top_srcdir)/include/aedis/resp3/type.hpp\
  $(top_srcdir)/include/aedis/resp3/read.hpp\
  $(top_srcdir)/include/aedis/resp3/write.hpp\
  $(top_srcdir)/include/aedis/resp3/request.hpp\
  $(top_srcdir)/include/aedis/resp3/impl/request.ipp\
  $(top_srcdir)/include/aedis/resp3/detail/impl/parser.ipp\
  $(top_srcdir)/include/aedis/resp3/impl/type.ipp
